# data-fusion-hub

./: .gitignore  README.md  requirements.txt
data-fusion-service/: Dockerfile  README.md  data_fusion_hub.db  pyproject.toml  requirements.txt  start.sh
data-fusion-service/app/: __init__.py  main.py
data-fusion-service/app/api/: __init__.py
data-fusion-service/app/api/v1/: __init__.py  auth.py  data_fields.py  dataconnectors.py  (+4 more)
data-fusion-service/app/core/: __init__.py  config.py  database.py  security.py
data-fusion-service/app/models/: __init__.py  auth_config.py  data_connector.py  data_domain.py  data_field.py  data_object.py  data_object_bulk.py  login.py  role.py  role_api.py  role_approver_relationship.py  role_approver_relationship_db.py  role_db.py  user.py  user_db.py  user_role_request.py  user_role_request_db.py
data-fusion-service/app/repositories/: __init__.py  concrete_role_repository.py  concrete_user_repository.py  data_connector_repository.py  data_domain_repository.py  data_field_repository.py  data_object_repository.py  role_repository.py  user_repository.py
data-fusion-service/app/services/: __init__.py
data-fusion-service/app/utils/: password_utils.py
data-fusion-service/docs/: user_role_request_api.md
data-fusion-service/openspec/: AGENTS.md  README.md  project.md
data-fusion-service/tests/: __init__.py  integration_test_user_role_request.py  test_auth.py  test_data_connectors.py  test_data_domains.py  test_data_object_bulk.py  test_data_objects.py  test_main.py  test_roles.py  test_user_role_requests.py  test_users.py
(+102 files in other folders)
